para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/14.AMZ
void main() {
	int i [5] = [1,2,3,4,5.1];
	int b[2] = [1,2,3];
	int c[1] = ["a"];
}
